actual state